--- a/style.css
+++ b/style.css
@@ -1,2 +1,24 @@
 canvas { position:fixed; top:0; left:0; z-index:1; }
 #contenu { position:relative; z-index:2; }
+
+html, body {
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+#settings {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: 100%;
+    background-color: black;
+}
