--- a/style.css
+++ b/style.css
@@ -15,11 +15,13 @@ body {
 }
 
 #settings {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 20%;
     height: 100%;
-    background-color: black;
+    border-left: 1px solid white;
+    background-color: #121212;
 }
