--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
-canvas { position:fixed; top:0; left:0; z-index:1; }
+canvas { 
+    position:fixed; 
+    top:0; 
+    left:0; 
+    z-index:1;
+    cursor: pointer;
+}
 #contenu { position:relative; z-index:2; }
 
 html, body {
